message Envelope {
    required double min_x = 1;
    required double min_y = 2;
    required double max_x = 3;
    required double max_y = 4;
}

message BasicResponse {
    optional Error error = 1; //An error if one was raised by the service operation
}

message PropertyValue {
    string name = 1;
    oneof property_value {
        bool bool_value = 1;
        int32 byte_value = 2;
        string datetime_value = 3;
        float single_value = 4;
        double double_value = 5;
        int32 int16_value = 6;
        int32 int32_value = 7;
        int64 int64_value = 8;
        string string_value = 9;
        bytes blob_value = 10;
        bytes clob_value = 11;
        FeatureRecord feature_value = 12;
        bytes geometry_value = 13;
        bytes raster_value = 14;
        double decimal_value = 15;
    }
}

message DataPropertyDescriptor {
    string name = 1;
    FdoDataType data_type = 2;
}

message DataRecordHeader {
    repeated DataPropertyDescriptor property = 1;
}

message DataRecord { //TODO: Maybe this should be a oneof
    optional Error error = 1; //An error if one was raised by the service operation. This only exists in the first data record
    optional DataRecordHeader header = 2; //A data record header describing the structure of the data record. This only exists on the first data record
    repeated PropertyValue property = 3;  //The property values of the data record
}

message FeatureRecord { //TODO: Maybe this should be a oneof
    optional Error error = 1; //An error if one was raised by the service operation. This only exists in the first data record
    optional ClassDefinition header = 2; //A class definition describing the structure of the feature. This only exists on the first feature record
    repeated PropertyValue property = 3; //The property values of the feature record
}

message ResourceIdentifier {
    required string name = 1;
    required string path = 2;
    required string repository_name = 3;
    required string repository_type = 4;
    required string resource_type = 5;
}

message Error {
    string name = 1;
    string message = 2;
    repeated string stack = 3;
}

message StringCollection {
    repeated string item = 1;
}

message FeatureSchema {
    required string name = 1;
    optional string description = 2;
    repeated ClassDefinition class = 3;
    optional bool marked_for_delete = 4;
}

message ClassDefinition {
    required string name = 1;
    optional string description = 2;
    optional string geom_name = 3;
    repeated PropertyDefinition property = 4;
    optional bool marked_for_delete = 4;
}

message PropertyDefinition {
    oneof property_type {
        DataPropertyDefinition data = 1;
        GeometricPropertyDefinition geom = 2;
        RasterPropertyDefinition raster = 3;
    }
    optional bool marked_for_delete = 4;
}

enum FdoDataType {
    Blob = 10;
    Boolean = 1;
    Byte = 2;
    Clob = 11;
    DateTime = 3;
    Decimal = 15;
    Double = 5;
    Int16 = 6;
    Int32 = 7;
    Int64 = 8;
    Single = 4;
    String = 9;
}

message RasterPropertyDefinition {
    required string name = 1;
    optional string description = 2;
    optional bool is_read_only = 3;
    optional bool is_nullable = 4;
    optional string spatial_context = 5;
    required int32 image_x_size = 6;
    required int32 image_y_size = 7;
}

message DataPropertyDefinition {
    required string name = 1;
    optional string description = 2;
    required FdoDataType data_type = 3;
    optional bool is_read_only = 4;
    optional bool is_nullable = 5;
    optional bool is_autogenerated = 6;
    optional int32 string_length = 7;
    optional int32 decimal_precision = 8;
    optional int32 decimal_scale = 9;
}

message GeometricPropertyDefinition {
    required string name = 1;
    optional string description = 2;
    optional string spatial_context = 3;
    optional int geometry_type = 4;
    optional int specific_geometry_type = 5;
    optional bool is_read_only = 6;
    optional bool has_elevation = 7;
}